fixed website footer and contenent alignment issue. it was missing a closing </div>

--- a/web_dev_projects/Tea_Cozy/style.css
+++ b/web_dev_projects/Tea_Cozy/style.css
@@ -8,7 +8,6 @@ body{
     margin: 0;
     font-size: 22px;
     text-align: center;
-    margin: auto;
 }
 
 a{
@@ -48,14 +47,14 @@ header img{
 nav{
     text-align: right;
     flex-grow: 1;
-    padding: 20px 10px;
+    
     
 }
 
 nav span{
     display: inline-block;
     text-decoration: underline;
-    
+    padding: 20px 10px;
     
 }
 
@@ -100,7 +99,7 @@ nav span{
 }
 
 .item{
-    padding: 0px;
+    padding: 5px;
 }
 
 .item img{
@@ -124,13 +123,13 @@ nav span{
 #locations .flex-container {
     
     margin: auto;
-    width: 1200px;
+    width: 1100px;
     
 }
 
 .location {
     background-color: black;
-    padding: 5px;
+    padding: 10px;
     margin: 5px 20px;
     display: flex;
     flex-direction: column;
@@ -144,6 +143,9 @@ nav span{
     height: 200px;
 
 }
+
+/*--- Footer Section ---*/
+
 footer {
     text-align: left;
     padding-left: 20px;
